// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/UITitle > renders correctly - level 1 1`] = `
<h1
  class="ui-title ui-title--large--1"
>
  Test
</h1>
`;

exports[`svelte/UITitle > renders correctly - level 2 1`] = `
<h2
  class="ui-title ui-title--2"
>
  Test
</h2>
`;

exports[`svelte/UITitle > renders correctly - level 3 1`] = `
<h3
  class="ui-title ui-title--3"
>
  Test
</h3>
`;

exports[`svelte/UITitle > renders correctly - level 4 1`] = `
<h4
  class="ui-title ui-title--4"
>
  Test
</h4>
`;

exports[`svelte/UITitle > renders correctly - level 5 1`] = `
<h5
  class="ui-title ui-title--5"
>
  Test
</h5>
`;

exports[`svelte/UITitle > renders correctly - level 6 1`] = `
<h6
  class="ui-title ui-title--6"
>
  Test
</h6>
`;

exports[`svelte/UITitle > renders correctly - modifier different than level 1`] = `
<h1
  class="ui-title ui-title--5--large"
>
  Test
</h1>
`;

exports[`svelte/UITitle > renders correctly - with id 1`] = `
<h1
  class="ui-title ui-title--1"
  id="test"
>
  Test
</h1>
`;

exports[`svelte/UITitle > renders correctly - with itemprop 1`] = `
<h1
  class="ui-title ui-title--1"
  itemprop="name"
>
  <span
    class="ui-markdown ui-markdown--emphasis"
  >
    Test
  </span>
</h1>
`;
